# streamtranscoder

./: AUTHORS  COPYING  Makefile.am  Makefile.in  README.md  StdAfx.cpp  StdAfx.h  aclocal.m4  cbuffer.c  cbuffer.h  configure  configure.in  decodethread.cpp  decodethread.h  mp3decoder.cpp  mp3decoder.h  reconnectthread.cpp  reconnectthread.h  resource.h  socket_client.c  socket_client.h  sourcethread.cpp  sourcethread.h  streamTranscoderUIv3.cpp  streamTranscoderUIv3.dsp  streamTranscoderUIv3.dsw  streamTranscoderUIv3.h  streamTranscoderUIv3.rc  streamTranscoderUIv3Dlg.cpp  streamTranscoderUIv3Dlg.h  streamTranscoderV3Service.dsp  streamTranscoderv3.cpp  streamTranscoderv3.nsi  streamTranscoderv3Service.cpp  vorbisdecoder.cpp  vorbisdecoder.h
liboddcast/: Makefile.in  Socket.cpp  liboddcast.cpp  liboddcast.dsp  liboddcast.h  resample.c
res/: streamTranscoderUIv3.rc2
